--- a/probnick/probnick.css
+++ b/probnick/probnick.css
@@ -15,6 +15,14 @@
     background-color: blueviolet;
 }
 
+td{
+   border: 1px solid black; 
+}
+
+h3{
+    margin-left: 15px;
+}
+
 .text{
     border: 1px solid black;
     margin-left: 15px;
