--- a/var/css.css
+++ b/var/css.css
@@ -15,6 +15,20 @@
     background-color: blueviolet;
 }
 
+td{
+   border: 1px solid black; 
+}
+
+h3{
+    margin-left: 15px;
+}
+
+.tabl{
+    text-align: center;
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
 .text{
     border: 1px solid black;
     margin-left: 15px;
